1. Improve styling 2. Monitoring button changing caption 3. Add "goToEnd button"

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set (CORE_DICT_HEADERFILES
     EventDisplay.hxx
     platform_spec.h
     Interface.hxx
+    SetT2KStyle.hxx
 )
 
 set( CORE_HEADERFILES
