--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,16 @@ cmake_minimum_required(VERSION 3.1)
 set(PROJECT_NAME DAQ_reader)
 set(PROJECT_VERSION 1.0)
 
-cmake_policy(SET CMP0048 NEW) # version in project()
+#cmake_policy(SET CMP0048 NEW) # version in project()
 project(${PROJECT_NAME} VERSION ${PROJECT_VERSION})
 
 set(CMAKE_CXX_STANDARD 14) # Enable c++14 standard
 
-list(APPEND CMAKE_MODULE_PATH
-            ${PROJECT_SOURCE_DIR}/cmake)
-include( PackageBuilder )
+#list(APPEND CMAKE_MODULE_PATH
+#            ${PROJECT_SOURCE_DIR}/cmake)
+#include( PackageBuilder )
 
-pbuilder_prepare_project()
+#pbuilder_prepare_project()
 
 ######
 # ROOT
@@ -26,20 +26,25 @@ pbuilder_prepare_project()
 list (APPEND Root_COMPONENTS RIO Net Hist Graf Graf3d Gpad Gui Tree Rint Postscript Matrix Physics MathCore Thread)
 find_package (ROOT 6.00 REQUIRED COMPONENTS ${Root_COMPONENTS})
 if (ROOT_FOUND)
-    pbuilder_add_ext_libraries (${ROOT_LIBRARIES})
+#    pbuilder_add_ext_libraries (${ROOT_LIBRARIES})
 else (ROOT_FOUND)
     message(FATAL "Unable to find ROOT")
 endif (ROOT_FOUND)
+include(${ROOT_USE_FILE})
 include_directories (${ROOT_INCLUDE_DIR})
 
 #########
 # sources
 #########
-
-include_directories (BEFORE
+#
+include_directories (
+    ${ROOT_INCLUDE_DIR}
     ${PROJECT_SOURCE_DIR}/app
     ${PROJECT_SOURCE_DIR}/src
+    ${PROJECT_SOURCE_DIR}/external/hat_event
+    ${PROJECT_SOURCE_DIR}/external/hat_event/src/
 )
 
+add_subdirectory (external/hat_event/)
 add_subdirectory (src)
 add_subdirectory (app)
