--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,19 +2,5 @@
 #   Applications     #
 ######################
 
-set (APPLICATIONS_HEADERFILES
-
-)
-
-set (APPLICATIONS_DEP_LIBRARIES
-    CCore
-)
-
-
-set (APPLICATIONS_PROGRAMS
-    Converter
-    Monitor
-)
-
-pbuilder_executables( APPLICATIONS_PROGRAMS APPLICATIONS_DEP_LIBRARIES )
-pbuilder_install_headers (${APPLICATIONS_HEADERFILES})
+add_executable(Converter Converter.cxx)
+target_link_libraries(Converter TCore ${ROOT_LIBRARIES})
