Add package builder and install target

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,5 +2,20 @@
 #   Applications     #
 ######################
 
-add_executable(Converter Converter.cxx)
-target_link_libraries(Converter TCore ${ROOT_LIBRARIES})
+set(exe_sources Converter.cxx
+                Monitor.cxx)
+set(exe_libraries TCore)
+
+pbuilder_executables(
+        SOURCES ${exe_sources}
+        TARGETS_VAR programs
+        PROJECT_LIBRARIES ${exe_libraries}
+        PUBLIC_EXTERNAL_LIBRARIES ${PUBLIC_EXT_LIBS}
+        PRIVATE_EXTERNAL_LIBRARIES ${PRIVATE_EXT_LIBS}
+)
+
+# Installation of executable
+pbuilder_component_install_and_export(
+       COMPONENT Executables
+       EXETARGETS ${programs}
+)
