--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ include_directories (
     ${PROJECT_SOURCE_DIR}/src
     ${PROJECT_SOURCE_DIR}/external/hat_event
     ${PROJECT_SOURCE_DIR}/external/hat_event/src/
+    ${PROJECT_SOURCE_DIR}/external/cli_parser/include
 )
 
 add_subdirectory (src)
