--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/hat_event"]
 	path = external/hat_event
 	url = https://gitlab.com/t2k-beamtest/hat_event.git
+[submodule "external/cli_parser"]
+	path = external/cli_parser
+	url = https://github.com/nadrino/simple-cpp-cmd-line-parser.git
