--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,10 @@ set (CORE_SOURCEFILES
 # If there were other libraries in this package on which this library depends, then they would be put in this variable
 set(PACKAGE_LIBS TRawEvent_daq_reader)
 
+if(ENABLE_MIDASIO)
+    LIST(APPEND PACKAGE_LIBS midasio_daq_reader)
+endif(ENABLE_MIDASIO)
+
 set( CORE_LINKDEF_HEADERFILE LinkDef/CCoreLinkDef.h )
 set( CORE_SOURCEFILES ${CORE_SOURCEFILES} ${CMAKE_CURRENT_BINARY_DIR}/CCoreDict.cxx )
 set( CORE_DICT_PCMFILE ${CMAKE_CURRENT_BINARY_DIR}/CCoreDict_rdict.pcm )
@@ -50,10 +54,6 @@ pbuilder_install_files(${LIB_INSTALL_DIR} ${CORE_DICT_PCMFILE})
 # ###########
 # # Library #
 # ###########
-message("here")
-message("${PUBLIC_EXT_LIBS}")
-message("${PRIVATE_EXT_LIBS}")
-message("${PACKAGE_LIBS}")
 
 pbuilder_library(
         TARGET TCore
