clenaup unnecessary include_directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,8 +68,8 @@ include_directories (
     ${ROOT_INCLUDE_DIR}
     ${PROJECT_SOURCE_DIR}/app
     ${PROJECT_SOURCE_DIR}/src
-    ${PROJECT_SOURCE_DIR}/external/hat_event
-    ${PROJECT_SOURCE_DIR}/external/hat_event/src/
+    # ${PROJECT_SOURCE_DIR}/external/hat_event
+    ${PROJECT_SOURCE_DIR}/external/hat_event/src
     ${PROJECT_SOURCE_DIR}/external/midasio
     ${PROJECT_SOURCE_DIR}/external/cli_parser/include
 )
